# bullshark

./: Cargo.toml
consensus/: Cargo.toml
consensus/src/: lib.rs  simple_consensus.rs
network/: Cargo.toml
primitives/src/: address.rs  lib.rs  transaction.rs
vm/: Cargo.toml
vm/src/: lib.rs  simple_vm.rs
